--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Crave Bites</title>
 	<link rel="icon" type="image/png" href="assets/favicon.png">
 	
-	<script src="https://cdn.tailwindcss.com"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 	<script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=TASA+Explorer:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 	<style>
