--- a/index.html
+++ b/index.html
@@ -39,19 +39,17 @@
             <div class="px-6 py-4">
                 <div class="relative w-full h-80 rounded-2xl overflow-hidden shadow-lg">
                     <!-- Banner Images -->
-                    <div class="relative w-full h-full">
+                    <div class="relative w-full h-full overflow-hidden">
                         <template x-for="(banner, index) in banners" :key="index">
                             <div x-show="currentBannerIndex === index" 
-                                 x-transition:enter="transition ease-in-out duration-500" 
-                                 x-transition:enter-start="opacity-0 transform translate-x-full" 
-                                 x-transition:enter-end="opacity-100 transform translate-x-0"
-                                 x-transition:leave="transition ease-in-out duration-500" 
-                                 x-transition:leave-start="opacity-100 transform translate-x-0" 
-                                 x-transition:leave-end="opacity-0 transform -translate-x-full"
+                                 x-transition:enter="transition ease-in-out duration-600" 
+                                 x-transition:enter-start="transform translate-x-full" 
+                                 x-transition:enter-end="transform translate-x-0"
+                                 x-transition:leave="transition ease-in-out duration-600" 
+                                 x-transition:leave-start="transform translate-x-0" 
+                                 x-transition:leave-end="transform -translate-x-full"
                                  class="absolute inset-0">
-                                <img :src="banner" :alt="'Promo Banner ' + (index + 1)" class="w-full h-full object-cover">
-                                <!-- Optional overlay for better text readability -->
-                                <div class="absolute inset-0 bg-black bg-opacity-20"></div>
+                                <img :src="banner" :alt="'Promo Banner ' + (index + 1)" class="w-full h-full object-cover" @error="console.log('Image failed to load:', $event.target.src)" @load="console.log('Image loaded successfully:', $event.target.src)">
                             </div>
                         </template>
                     </div>
@@ -631,9 +629,9 @@
                 receiptNumber: '',
                 currentBannerIndex: 0,
                 banners: [
-                    'https://haqimzuhari.github.io/cravebites/assets/banner/promo1.jpg',
-                    'https://haqimzuhari.github.io/cravebites/assets/banner/promo2.jpg',
-                    'https://haqimzuhari.github.io/cravebites/assets/banner/promo3.jpg'
+                    'assets/banner/promo1.png',
+                    'assets/banner/promo2.png',
+                    'assets/banner/promo3.png'
                 ],
                 customerForm: {
                     customerName: '',
@@ -753,7 +751,7 @@
                     // Auto-rotate carousel every 3 seconds
                     setInterval(() => {
                         this.nextBanner();
-                    }, 3000);
+                    }, 5000);
                 },
                 
                 nextBanner() {
